--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -1,10 +1,8 @@
 name: github pages
 
 on:
-  push:
-    branches:
-      - main  # Set a branch to deploy
-  pull_request:
+  check_run:
+  types: [rerequested, completed]
 
 jobs:
   deploy:
